--- a/tri fusion.html
+++ b/tri fusion.html
@@ -613,10 +613,6 @@ T = [<span class="number">8</span>, <span class="number">3</span>, <span class="
             </thead>
             <tbody>
                 <tr>
-                    <td><strong>tableau</strong></td>
-                    <td>Tableau d'entiers</td>
-                </tr>
-                <tr>
                     <td><strong>gauche</strong></td>
                     <td>Tableau d'entiers</td>
                 </tr>
@@ -625,19 +621,7 @@ T = [<span class="number">8</span>, <span class="number">3</span>, <span class="
                     <td>Tableau d'entiers</td>
                 </tr>
                 <tr>
-                    <td><strong>milieu</strong></td>
-                    <td>Entier</td>
-                </tr>
-                <tr>
-                    <td><strong>i</strong></td>
-                    <td>Entier</td>
-                </tr>
-                <tr>
-                    <td><strong>j</strong></td>
-                    <td>Entier</td>
-                </tr>
-                <tr>
-                    <td><strong>k</strong></td>
+                    <td><strong>milieu , i , j ,k</strong></td>
                     <td>Entier</td>
                 </tr>
             </tbody>
